--- a/index.html
+++ b/index.html
@@ -1462,6 +1462,13 @@ setInterval(()=>{ if(online()) autoSync(); }, 45000);
 
 })();
 </script>
+<div id="scanOverlay" style="display:none; position:fixed; inset:0; background:#000; z-index:9999;">
+  <video id="scanVideo" autoplay playsinline
+         style="width:100%; height:100%; object-fit:cover;"></video>
+
+  <!-- Cadre visuel -->
+  <div style="position:absolute; inset:0; display:flex; align-items:center; justify-content:center; pointer-events:none;">
+    <div style="width:min(80vw,420px); height:180px; border:2px solid rgba(255,255,255,.9); border-radius:16px;"></div>
 <script>
 /* PWA cache */
 if('serviceWorker' in navigator){ navigator.serviceWorker.register('sw.js'); }
