--- a/index.html
+++ b/index.html
@@ -36,22 +36,7 @@
     .btnDanger{background:#fff;border:1px solid #f2c; border-radius:12px}
     .small{font-size:13px;padding:8px 10px}
     .hidden{display:none}
-  
-    /* === Action visual status === */
-    select.actionADD{ background:#16a34a; color:#fff; font-weight:800; }
-    select.actionREMOVE{ background:#f59e0b; color:#111827; font-weight:800; }
-    select.actionSOLD{ background:#dc2626; color:#fff; font-weight:900; }
-    select.actionMOVE{ background:#e5e7eb; color:#111827; font-weight:800; }
-
-    .actPill{ display:inline-block; padding:6px 10px; border-radius:999px; font-weight:900; font-size:12px; }
-    .actPill.add{ background:#16a34a; color:#fff; }
-    .actPill.remove{ background:#f59e0b; color:#111827; }
-    .actPill.sold{ background:#dc2626; color:#fff; }
-    .actPill.move{ background:#e5e7eb; color:#111827; }
-
-    .soldBlock{ padding:10px 12px; border-radius:12px; background:#fee2e2; color:#7f1d1d; font-weight:900; }
-
-</style>
+  </style>
 </head>
 <body>
 
@@ -101,9 +86,12 @@
   <hr style="border:none;border-top:1px solid #eee;margin:12px 0">
   <div class="row">
     <input id="caisseKnown" placeholder="Caisse (ex: A3)" />
-    \1
-    <span class="actPill add" id="pill_actionKnown">ADD</span>
-    <div class="soldBlock" id="soldWarn_actionKnown" style="display:none">⚠️ SOLD est définitif. Confirmation requise.</div>
+    <select id="actionKnown">
+      <option value="ADD">ADD (ranger)</option>
+      <option value="MOVE">MOVE</option>
+      <option value="REMOVE">REMOVE</option>
+      <option value="SOLD">SOLD</option>
+    </select>
     <button class="btnPrimary" id="btnSaveKnown">✅ Enregistrer</button>
   </div>
   <div class="muted">Caisse proposée = dernière caisse utilisée (globale).</div>
@@ -173,25 +161,28 @@
   <div class="prod" id="afterProd"></div>
   <div class="row" style="margin-top:10px">
     <input id="caisseAfter" placeholder="Caisse (ex: A3)" />
-    \1
-    <span class="actPill add" id="pill_actionAfter">ADD</span>
-    <div class="soldBlock" id="soldWarn_actionAfter" style="display:none">⚠️ SOLD est définitif. Confirmation requise.</div>
+    <select id="actionAfter">
+      <option value="ADD">ADD (ranger)</option>
+      <option value="MOVE">MOVE</option>
+      <option value="REMOVE">REMOVE</option>
+      <option value="SOLD">SOLD</option>
+    </select>
     <button class="btnPrimary" id="btnSaveAfter">✅ Enregistrer</button>
   </div>
   <div class="muted">Caisse proposée = dernière caisse utilisée (globale).</div>
 </div>
 
 
-<div class="card" id="caisseViewBox">
+<!-- CAISSE VIEW -->
+<div class="card">
   <h3 style="margin:0 0 10px">📦 Contenu d'une caisse</h3>
   <div class="row">
     <input id="caisseView" placeholder="Caisse (ex: C3)" />
-    <button class="btnGhost" id="btnViewCaisse">Voir</button>
+    <button class="btnGhost small" id="btnViewCaisse">Voir</button>
   </div>
-  <div class="muted">Liste basée sur Stock_State (central) synchronisé.</div>
+  <div class="muted">Liste basée sur <b>Stock_State</b> (central) synchronisé.</div>
   <div id="caisseList" style="margin-top:10px"></div>
 </div>
-
 
 <!-- HISTORIQUE LOCAL (actions) -->
 <div class="card">
@@ -433,42 +424,95 @@ function applyQtyLocal(fnsku, asin, caisse, action){
 }
 
 
+
+/* Caisse view */
+function escHtml_(s){
+  return (s||'').toString()
+    .replace(/&/g,'&amp;').replace(/</g,'&lt;')
+    .replace(/>/g,'&gt;').replace(/"/g,'&quot;').replace(/'/g,'&#39;');
+}
+
+async function viewCaisse(){
+  const c = ($('caisseView')?.value || '').toUpperCase().trim();
+  const box = $('caisseList');
+  if(!box) return;
+  if(!c){
+    box.innerHTML = `<div class="muted">Entre une caisse.</div>`;
+    return;
+  }
+
+  const sm = loadStateMap();
+  const rows = [];
+  for(const [fn, obj] of Object.entries(sm||{})){
+    if(!obj || !obj.caisses) continue;
+    const q = Number(obj.caisses[c]||0)||0;
+    if(q<=0) continue;
+    rows.push({ fnsku: fn, asin: (obj.asin||'').toUpperCase().trim(), qty: q });
+  }
+  if(!rows.length){
+    box.innerHTML = `<div class="muted">Caisse <b>${escHtml_(c)}</b> : vide (selon Stock_State).</div>`;
+    return;
+  }
+
+  // enrich with product info if available
+  const uniqAsins = Array.from(new Set(rows.map(r=>r.asin).filter(Boolean)));
+  const prodByAsin = {};
+  await Promise.all(uniqAsins.map(async (a)=>{
+    try{ prodByAsin[a] = await idbGet('products', a); }catch(e){ prodByAsin[a]=null; }
+  }));
+
+  rows.sort((a,b)=>{
+    const pa = prodByAsin[a.asin]?.title || a.asin || a.fnsku;
+    const pb = prodByAsin[b.asin]?.title || b.asin || b.fnsku;
+    return String(pa).localeCompare(String(pb));
+  });
+
+  let html = `<div class="muted">Caisse <b>${escHtml_(c)}</b> — <b>${rows.length}</b> références</div>`;
+  html += `<div style="margin-top:8px;border:1px solid #eee;border-radius:12px;overflow:hidden">`;
+  html += rows.map(r=>{
+    const p = prodByAsin[r.asin] || null;
+    const title = p?.title ? escHtml_(p.title) : '';
+    const img = p?.photo_url ? `<img src="${escHtml_(p.photo_url)}" alt="" style="width:42px;height:42px;object-fit:cover;border-radius:10px;border:1px solid #eee">` : '';
+    const open = p?.product_url ? `<a href="${escHtml_(p.product_url)}" target="_blank" rel="noopener">ouvrir</a>` : '';
+    const label = title || escHtml_(r.asin || r.fnsku);
+    const sub = `<div class="muted" style="font-size:12px">FNSKU: <b>${escHtml_(r.fnsku)}</b> · ASIN: <b>${escHtml_(r.asin||'—')}</b> · Qté: <b>${r.qty}</b> ${open ? '· '+open : ''}</div>`;
+    return `
+      <div style="display:flex;gap:10px;align-items:flex-start;padding:10px 12px;border-top:1px solid #eee">
+        ${img ? `<div style="flex:0 0 auto">${img}</div>` : ``}
+        <div style="flex:1 1 auto;min-width:0">
+          <div style="font-weight:800;line-height:1.2">${label}</div>
+          ${sub}
+        </div>
+        <div style="flex:0 0 auto">
+          <button class="btnGhost small" data-use-fnsku="${escHtml_(r.fnsku)}">Utiliser</button>
+        </div>
+      </div>
+    `;
+  }).join('');
+  html += `</div>`;
+  box.innerHTML = html;
+
+  // delegate "Utiliser"
+  box.querySelectorAll('button[data-use-fnsku]').forEach(btn=>{
+    btn.onclick = async ()=>{
+      const fn = btn.getAttribute('data-use-fnsku') || '';
+      if(!fn) return;
+      $('fnsku').value = fn;
+      $('fnsku').dispatchEvent(new Event('input', {bubbles:true}));
+      if(typeof lookupFnsku === 'function'){
+        await lookupFnsku();
+      }
+      window.scrollTo({ top: 0, behavior: 'smooth' });
+    };
+  });
+}
+
 /* Helpers */
 function setStatus(msg, cls=''){
   $('status').textContent = msg;
   $('status').className = 'muted ' + cls;
 }
 function online(){ return navigator.onLine; }
-
-function setSelectActionDefault(selId){
-  const el = $(selId);
-  if(!el) return;
-  el.value = 'ADD'; // ✅ toujours ADD par défaut
-  updateActionVisual(el);
-}
-function updateActionVisual(sel){
-  if(!sel) return;
-  const v = (sel.value||'ADD').toUpperCase();
-  sel.classList.remove('actionADD','actionREMOVE','actionSOLD','actionMOVE');
-  sel.classList.add('action'+v);
-  const pill = document.getElementById('pill_'+sel.id);
-  const warn = document.getElementById('soldWarn_'+sel.id);
-  if(pill){
-    pill.textContent = v;
-    pill.className = 'actPill ' + (v==='ADD'?'add':v==='REMOVE'?'remove':v==='SOLD'?'sold':'move');
-  }
-  if(warn){
-    warn.style.display = (v==='SOLD') ? 'block' : 'none';
-  }
-}
-// Confirmation bloquante pour SOLD
-async function confirmIfSold(sel){
-  const v = (sel && sel.value || '').toUpperCase();
-  if(v !== 'SOLD') return true;
-  return confirm('Confirmer SOLD ? (action définitive)');
-}
-
-
 
 function normFnsku(v){
   return (v||'').toString().trim().toUpperCase();
@@ -872,9 +916,6 @@ function resetToScan(){
     selectedProduct = null;
     currentFnsku = '';
     showOnly('scanBox');
-
-    try{ $('actionKnown').value = 'ADD'; }catch(e){}
-    try{ $('actionAfter').value = 'ADD'; }catch(e){}
     setStatus('Prêt.', '');
     $('fnsku').value = '';
     $('fnsku').focus();
@@ -887,10 +928,6 @@ function showOnly(boxId){
   const ids=['knownBox','searchBox','confirmBox','afterLinkBox','settingsBox'];
   ids.forEach(id=>$(id).classList.add('hidden'));
   if(boxId) $(boxId).classList.remove('hidden');
-
-  // ✅ action par défaut
-  if(id==='knownBox') setSelectActionDefault('actionKnown');
-  if(id==='afterLinkBox') setSelectActionDefault('actionAfter');
 }
 
 function proposeCaisse(){
@@ -985,6 +1022,8 @@ async function pullAll(){
 
     // Apres pull des actions, on regenere la vue.
     await refreshPills();
+    // ✅ Retour automatique au scan
+  resetToScan();
 await renderActions();
 
     $('syncMsg').textContent = '✅ Base + mapping à jour';
@@ -1121,7 +1160,6 @@ async function lookupFnsku(){
       currentFnsku = '';
       $('knownProd').innerHTML = prodHTML(p, {fnsku:''});
       showOnly('knownBox');
-    try{ $('actionKnown').value='ADD'; }catch(e){}
       setStatus('ASIN saisi ✅ — produit trouvé (local).', 'ok');
       return;
     }
@@ -1191,7 +1229,6 @@ async function lookupFnsku(){
     }
     proposeCaisse();
     showOnly('knownBox');
-    try{ $('actionKnown').value='ADD'; }catch(e){}
     setStatus('FNSKU connu.', 'ok');
     return;
   }
@@ -1528,22 +1565,7 @@ function stopScan_(){
 }
 
 /* UI bindings */
-(function(){
-  const __b=$('btnLookup');
-  if(__b){
-    __b.addEventListener('click', (ev)=>{
-      try{ ev.preventDefault(); ev.stopPropagation(); }catch(_){}
-      Promise.resolve(lookupFnsku()).catch(e=>{
-        console.error(e);
-        setStatus('Erreur recherche: ' + (e && (e.message||e) || e), 'bad');
-      });
-    }, {passive:false});
-    // fallback for some Android taps
-    __b.addEventListener('touchend', (ev)=>{
-      try{ ev.preventDefault(); }catch(_){}
-    }, {passive:false});
-  }
-})();
+$('btnLookup').onclick = lookupFnsku;
 $('btnClear').onclick = ()=>{
   $('fnsku').value='';
   $('q').value='';
@@ -1575,6 +1597,12 @@ $('btnFlash') && ($('btnFlash').onclick = () => {
   }catch(e){}
 });
 
+// 📦 Contenu d'une caisse
+$('btnViewCaisse') && ($('btnViewCaisse').onclick = viewCaisse);
+$('caisseView') && ($('caisseView').addEventListener('keydown', (e)=>{ if(e.key==='Enter') viewCaisse(); }));
+
+
+
 $('btnSearch').onclick = doSearch;
 $('accountFilter').addEventListener('change', ()=>doSearch());
 $('q').addEventListener('keydown', (e)=>{ if(e.key==='Enter') doSearch(); });
@@ -1586,9 +1614,6 @@ $('btnChange').onclick = ()=>{
 };
 
 $('btnSaveKnown').onclick = async ()=>{
-    const __sel = $('actionKnown');
-    if(!await confirmIfSold(__sel)) return;
-
   const fnsku = currentFnsku;
   const mapped = await idbGet('mapping', fnsku);
   const asin = mapped ? mapped.asin : '';
@@ -1596,9 +1621,6 @@ $('btnSaveKnown').onclick = async ()=>{
 };
 
 $('btnSaveAfter').onclick = async ()=>{
-    const __sel = $('actionAfter');
-    if(!await confirmIfSold(__sel)) return;
-
   await saveAction({fnsku: currentFnsku, asin: selectedProduct.asin, caisse:$('caisseAfter').value, action:$('actionAfter').value});
 };
 
@@ -1686,16 +1708,6 @@ setInterval(()=>{ if(online()) autoSync(); }, 45000);
 
 /* Init */
 (async function init(){
-  // 📦 Voir contenu d'une caisse
-  const btnView = $('btnViewCaisse');
-  const caisseView = $('caisseView');
-  if(btnView) btnView.onclick = viewCaisse;
-  if(caisseView){
-    caisseView.addEventListener('keydown', (e)=>{
-      if(e.key==='Enter'){ e.preventDefault(); viewCaisse(); }
-    });
-  }
-
   db = await openDB();
   await refreshPills();
   await renderActions();
@@ -1708,56 +1720,6 @@ setInterval(()=>{ if(online()) autoSync(); }, 45000);
     await pullAll();
   }
 })();
-
-
-// === Caisse view (Stock_State) ===
-async function viewCaisse(){
-  const c = ($('caisseView').value||'').toUpperCase().trim();
-  if(!c){ $('caisseList').innerHTML = '<div class="muted">Entre une caisse.</div>'; return; }
-  const sm = loadStateMap();
-  const rows = [];
-  for(const [fn, obj] of Object.entries(sm||{})){
-    if(!obj || !obj.caisses) continue;
-    const q = Number(obj.caisses[c]||0)||0;
-    if(q<=0) continue;
-    rows.push({fnsku: fn, asin: (obj.asin||'').toUpperCase(), qty: q});
-  }
-  if(!rows.length){
-    $('caisseList').innerHTML = '<div class="muted">Caisse '+c+' : vide (selon Stock_State).</div>';
-    return;
-  }
-  // enrich with product title/photo if available
-  for(const r of rows){
-    if(r.asin){
-      try{
-        const p = await idbGet('products', r.asin);
-        if(p){
-          r.title = p.title || '';
-          r.photo = p.photo_url || '';
-          r.url = p.product_url || '';
-        }
-      }catch(e){}
-    }
-  }
-  rows.sort((a,b)=> (a.title||a.asin).localeCompare((b.title||b.asin)));
-  const htmlRows = rows.map(r=>{
-    const t = (r.title||r.asin||'').replace(/</g,'&lt;');
-    const sub = `${r.qty}× <b>${c}</b>`;
-    const img = r.photo ? `<img src="${r.photo}" style="width:46px;height:46px;object-fit:cover;border-radius:10px">` : '';
-    const linkOpen = r.url ? `<a href="${r.url}" target="_blank" class="muted" style="text-decoration:underline">ouvrir</a>` : '';
-    return `<div class="row" style="align-items:flex-start;gap:10px;padding:10px;border:1px solid #eee;border-radius:14px;margin-bottom:8px">
-      ${img}
-      <div style="flex:1">
-        <div style="font-weight:800">${t}</div>
-        <div class="muted">${r.fnsku} · ${r.asin||'—'} · ${sub} · ${linkOpen}</div>
-      </div>
-    </div>`;
-  }).join('');
-  $('caisseList').innerHTML = `<div class="muted" style="margin-bottom:8px">Caisse <b>${c}</b> — ${rows.length} références</div>` + htmlRows;
-}
-
-
-
 </script>
   <script>
 (function () {
